add new function from js.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 
 <body>
 
-
+  <div class="class">
+    <p class="text">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam officiis minus doloremque repudiandae facere nemo
+      aliquid itaque veniam eos saepe nulla, in eius sunt inventore totam dolorum dolores commodi molestiae delectus
+      autem ex maxime odit? Ratione non tenetur sed!
+    </p>
+  </div>
   <p>hello wordl...</p>
 
 
